--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -10,8 +10,12 @@
 <body>
     {{>header}}
      <div class="main-content">
-            <h1>{{title}}</h1>
-
+        <h1>{{title}}</h1>
+        <div class="about-content">
+            <p>Created by Bruna Leão.</p>
+            <p>This app uses data from weatherstack.com and mapbox.com</p>
+        </div>
+          
         </div>
       {{>footer}}
     
